clang/test/BSC/Negative/Ownership/RuleCheck/Maple/cvt/cvt.cbs
// RUN: %clang_cc1 -verify %s

void * malloc(unsigned long);
void free(void * p);

int * owned case1() {
    int * a = (int*)malloc(sizeof(int));
    int * owned b = (int * owned)a;
    return b;
}

void * owned case2() {
    void * owned a = (void * owned)malloc(sizeof(int));
    return a;
}

void case3() {
    void * owned a = (void * owned)malloc(sizeof(int));
    free((void *)a);
}

void case4(void * owned buf) {
    free((void *)buf);
}

struct B {};
struct A {
    int numRunxs;
    struct B * owned b;
};

void case7() {
    struct A * owned aaa = (struct A * owned)(void * owned)malloc(sizeof(struct A));
    aaa->b = (struct B * owned)(void * owned)malloc(sizeof(struct B));
    free((void *)(void * owned)aaa->b);
} // expected-error {{aaa's memory will leak at the end of scope}}

void case8() {
    struct A * owned aaa = (struct A * owned)(void * owned)malloc(sizeof(struct A));
    aaa->b = (struct B * owned)(void * owned)malloc(sizeof(struct B));
} // expected-error {{aaa's memory will leak at the end of scope}}